fix frontend scrollbar, add backend calls

--- a/Weather-Station-App/src/app/app.component.css
+++ b/Weather-Station-App/src/app/app.component.css
@@ -1,12 +1,10 @@
 .display-temp {
     position: absolute;
+    margin-top: -100px;
+    margin-left: -250px;
     top: 50%;
     left: 50%;
-    font-size: 200pt;
-    margin-left: -350px;
-    margin-top: -150px;
-    height: 100%;
-    width: 100%;
+    font-size: 170pt;
 }
 .hot {
     background: rgba(255, 0, 0, 1);
